Bug 367861 - Kate crashes when switching session
Summary: Kate crashes when switching session
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-08-26 16:46 UTC by Freddy Rietdijk
Modified: 2016-09-02 12:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: Applications 16.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Freddy Rietdijk 2016-08-26 16:46:26 UTC
Application: kate (16.08.0)
 (Compiled from sources)
Qt Version: 5.6.1
Frameworks Version: 5.24.0
Operating System: Linux 4.6.7 x86_64

-- Information about the crash:
- What I was doing when the application crashed:

I just opened Kate and changed sessions. This resulted directly in a crash.

NixOS Unstable 16.09.git.8512747 (Flounder)

The crash can be reproduced every time.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault
Using host libthread_db library "/nix/store/i0jphfihyndhv9lh1bgi1vlzygc1w8n1-glibc-2.24/lib/libthread_db.so.1".
To enable execution of this file add
	add-auto-load-safe-path /nix/store/hz3zjq2sznijk8rdknr3n6wkrb1zfk42-gcc-5.4.0-lib/lib/libstdc++.so.6.0.21-gdb.py
line to your configuration file "/home/freddy/.gdbinit".
To completely disable this security protection add
	set auto-load safe-path /
line to your configuration file "/home/freddy/.gdbinit".
For more information about this security protection see the
"Auto-loading safe path" section in the GDB manual.  E.g., run from the shell:
	info "(gdb)Auto-loading safe path"
[Current thread is 1 (Thread 0x7fe74772e340 (LWP 30641))]

Thread 3 (Thread 0x7fe726d87700 (LWP 30643)):
#0  0x00007fe74270b6ca in QMutex::lock() () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#1  0x00007fe7429284eb in ?? () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#2  0x00007fe73bab32bd in g_main_context_prepare () from /nix/store/h2zq29hbjfy6a70swr7s3wr6vxcfbb1q-glib-2.48.2/lib/libglib-2.0.so.0
#3  0x00007fe73bab3bc3 in g_main_context_iterate.isra () from /nix/store/h2zq29hbjfy6a70swr7s3wr6vxcfbb1q-glib-2.48.2/lib/libglib-2.0.so.0
#4  0x00007fe73bab3d9c in g_main_context_iteration () from /nix/store/h2zq29hbjfy6a70swr7s3wr6vxcfbb1q-glib-2.48.2/lib/libglib-2.0.so.0
#5  0x00007fe742928e1b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#6  0x00007fe7428d4bda in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#7  0x00007fe74270e56c in QThread::exec() () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#8  0x00007fe742b40605 in ?? () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5DBus.so.5
#9  0x00007fe742713129 in ?? () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#10 0x00007fe740699454 in start_thread () from /nix/store/i0jphfihyndhv9lh1bgi1vlzygc1w8n1-glibc-2.24/lib/libpthread.so.0
#11 0x00007fe741aff14f in clone () from /nix/store/i0jphfihyndhv9lh1bgi1vlzygc1w8n1-glibc-2.24/lib/libc.so.6

Thread 2 (Thread 0x7fe72e8dd700 (LWP 30642)):
#0  0x00007fe741af5dad in poll () from /nix/store/i0jphfihyndhv9lh1bgi1vlzygc1w8n1-glibc-2.24/lib/libc.so.6
#1  0x00007fe73f5f80f2 in _xcb_conn_wait () from /nix/store/a2mdlib7lkna82yrbycznagx7fzp3r23-libxcb-1.12/lib/libxcb.so.1
#2  0x00007fe73f5f9e07 in xcb_wait_for_event () from /nix/store/a2mdlib7lkna82yrbycznagx7fzp3r23-libxcb-1.12/lib/libxcb.so.1
#3  0x00007fe730e7b5e9 in ?? () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/qt5/plugins/platforms/../../../libQt5XcbQpa.so.5
#4  0x00007fe742713129 in ?? () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#5  0x00007fe740699454 in start_thread () from /nix/store/i0jphfihyndhv9lh1bgi1vlzygc1w8n1-glibc-2.24/lib/libpthread.so.0
#6  0x00007fe741aff14f in clone () from /nix/store/i0jphfihyndhv9lh1bgi1vlzygc1w8n1-glibc-2.24/lib/libc.so.6

Thread 1 (Thread 0x7fe74772e340 (LWP 30641)):
[KCrash Handler]
#5  0x00007fe743933d28 in ?? () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Widgets.so.5
#6  0x000000000046b5dc in KateViewManager::removeViewSpace(KateViewSpace*) ()
#7  0x000000000046c364 in KateViewManager::removeHiddenViewSpaces() ()
#8  0x000000000046e750 in KateViewManager::restoreViewConfiguration(KConfigGroup const&) ()
#9  0x000000000045ecef in KateMainWindow::readProperties(KConfigGroup const&) ()
#10 0x0000000000481374 in KateSessionManager::loadSession(QExplicitlySharedDataPointer<KateSession> const&) const ()
#11 0x000000000048248b in KateSessionManager::activateSession(QExplicitlySharedDataPointer<KateSession>, bool, bool) ()
#12 0x0000000000482a16 in KateSessionManager::activateSession(QString const&, bool, bool) ()
#13 0x000000000047da72 in KateSessionsAction::openSession(QAction*) ()
#14 0x00000000004967bc in KateSessionsAction::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) ()
#15 0x00007fe7429022a1 in QObject::event(QEvent*) () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#16 0x00007fe7437b35a1 in QAction::event(QEvent*) () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Widgets.so.5
#17 0x00007fe7437b91fc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Widgets.so.5
#18 0x00007fe7437be366 in QApplication::notify(QObject*, QEvent*) () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Widgets.so.5
#19 0x00007fe7428d68e8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#20 0x00007fe7428d86aa in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#21 0x00007fe742928a03 in ?? () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#22 0x00007fe73bab3ac7 in g_main_context_dispatch () from /nix/store/h2zq29hbjfy6a70swr7s3wr6vxcfbb1q-glib-2.48.2/lib/libglib-2.0.so.0
#23 0x00007fe73bab3cf8 in g_main_context_iterate.isra () from /nix/store/h2zq29hbjfy6a70swr7s3wr6vxcfbb1q-glib-2.48.2/lib/libglib-2.0.so.0
#24 0x00007fe73bab3d9c in g_main_context_iteration () from /nix/store/h2zq29hbjfy6a70swr7s3wr6vxcfbb1q-glib-2.48.2/lib/libglib-2.0.so.0
#25 0x00007fe742928dff in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#26 0x00007fe7428d4bda in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#27 0x00007fe7428dcf6d in QCoreApplication::exec() () from /nix/store/psbwpsbam2hz2drr4qjc9lwsk9l69hc3-qtbase-5.6.1-1/lib/libQt5Core.so.5
#28 0x000000000044379e in main ()

Reported using DrKonqi
Comment 1 Dominik Haumann 2016-09-02 12:01:20 UTC
Can you rerun this with full debug information?

Also, please reproduce this valgrind as follows:
$ valgrind kate
and then send please send the output - thanks!
Comment 2 Dominik Haumann 2016-09-02 12:18:52 UTC
Git commit a0c5008315fcc8564b61ca6acc3df83850ad12fe by Dominik Haumann.
Committed on 02/09/2016 at 12:18.
Pushed by dhaumann into branch 'master'.

Attempt to fix removing hidden view spaces

Maybe a view space (or splitter) was deleted twice

M  +6    -3    kate/kateviewmanager.cpp

http://commits.kde.org/kate/a0c5008315fcc8564b61ca6acc3df83850ad12fe
Comment 3 Dominik Haumann 2016-09-02 12:20:23 UTC
Git commit 1ba3b2f8a984772c74acc4c770d5f656444ae481 by Dominik Haumann.
Committed on 02/09/2016 at 12:19.
Pushed by dhaumann into branch 'Applications/16.08'.

Attempt to fix removing hidden view spaces

Maybe a view space (or splitter) was deleted twice

M  +6    -3    kate/kateviewmanager.cpp

http://commits.kde.org/kate/1ba3b2f8a984772c74acc4c770d5f656444ae481
Comment 4 Dominik Haumann 2016-09-02 12:21:51 UTC
I hope this is fixed now, a valgrind trace would help a lot, though :-)