Attempt to fix removing hidden view spaces

Maybe a view space (or splitter) was deleted twice

BUG: 367861